# jrl-walkgen

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  License.txt  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  STATUS  aclocal.m4  autogen.sh  cmake_metapod_configure.cmake  configure  configure.ac  index.html  package.xml  walkGenJrl.pc.cmake  walkGenJrl.pc.in
doc/: CMakeLists.txt  Doxyfile.extra.in  IEEEbib.bst  Makefile  Makefile.am  Makefile.in  PatternGenerator.tex  PatternGeneratorMain.out  PatternGeneratorMain.tex  common.dox  footer.html  header.html  package.dox  package.dox.cmake  pgbib.bib  pgjrl.dox  pgjrl.dox.in
doc/.svn/: entries
doc/additionalHeader/: install.hh  modules.h  modules.hh
include/walkGenJrl/: Clock.h  Makefile.am  Makefile.in  PGTypes.h  PatternGeneratorInterface.h  SimplePlugin.h  SimplePluginManager.h  StepStackHandler.h  TimeUtilsWindows.h  walkGenJrl_API.h
plugin/: CMakeLists.txt  Makefile  Makefile.in  Makefile.user.in  Makefile.user.orbix  WalkGenJRL.cpp
plugin/.svn/: entries
plugin/corba/: Makefile.am  walkpluginJRL.idl  walkpluginJRL.idl.cmake
plugin/script/: PartialDemoChambreDeCommerce.py  TestHWPGv3.py  TestWalkGenPBW.py
src/: Body.cpp  Body.h  CMakeLists.txt  COMPositions_1.txt  Clock.cpp  Clock.h  Clock.hh  CollisionDetector.cpp  CollisionDetector.h  ConvexHull.h  Debug.h  Debug.hh  Doxyfile  DynamicBody.cpp  DynamicBody.h  DynamicMultiBody.cpp  DynamicMultiBody.h  GenerateMotionFromKineoWorks.cpp  GenerateMotionFromKineoWorks.h  HRP2Specificities.xml  HumanoidDynamicMultiBody.cpp  HumanoidDynamicMultiBody.h  HumanoidSpecificities.cpp  HumanoidSpecificities.h  InverseKinematics.cpp  InverseKinematics.h  Joint.cpp  Joint.h  Makefile  Makefile.am  Makefile.in  Makefile.old  MatrixAbstractLayer.h  MatrixAbstractLayerBoost.h  MatrixAbstractLayerDoc.h  MatrixAbstractLayerSmall.h  MatrixAbstractLayerSmallMatrix3x3Default.h  MatrixAbstractLayerSmallVector3Default.h  MatrixAbstractLayerVNL.h  MultiBody.cpp  (+66 more)
src/.svn/: entries
src/FootTrajectoryGeneration/: FootTrajectoryGenerationAbstract.cpp  FootTrajectoryGenerationAbstract.h  FootTrajectoryGenerationAbstract.hh  FootTrajectoryGenerationMultiple.cpp  FootTrajectoryGenerationMultiple.h  FootTrajectoryGenerationMultiple.hh  FootTrajectoryGenerationStandard.cpp  FootTrajectoryGenerationStandard.h  FootTrajectoryGenerationStandard.hh  LeftAndRightFootTrajectoryGenerationMultiple.cpp  LeftAndRightFootTrajectoryGenerationMultiple.h  LeftAndRightFootTrajectoryGenerationMultiple.hh  OnLineFootTrajectoryGeneration.cpp  OnLineFootTrajectoryGeneration.h  footTrajectoryGenerationAbstract.cpp  footTrajectoryGenerationAbstract.h  footTrajectoryGenerationStandard.cpp  footTrajectoryGenerationStandard.h
src/Fortran/: CMakeLists.txt  dgesvd.f  dgetrf.f  dgetrf2.f  gdgemm.f  gdgges.f  gdtgex2.f  gdtgexc.f  gdtgsen.f  gsgemm.f
src/GlobalStrategyManagers/: CoMAndFootOnlyStrategy.cpp  CoMAndFootOnlyStrategy.h  CoMAndFootOnlyStrategy.hh  DoubleStagePreviewControlStrategy.cpp  DoubleStagePreviewControlStrategy.h  DoubleStagePreviewControlStrategy.hh  GlobalStrategyManager.cpp  GlobalStrategyManager.h  GlobalStrategyManager.hh
src/Mathematics/: AnalyticalZMPCOGTrajectory.cpp  AnalyticalZMPCOGTrajectory.h  AnalyticalZMPCOGTrajectory.hh  Bsplines.cpp  Bsplines.hh  ConvexHull.cpp  ConvexHull.h  ConvexHull.hh  FootConstraintsAsLinearSystem.cpp  FootConstraintsAsLinearSystem.h  FootConstraintsAsLinearSystem.hh  FootConstraintsAsLinearSystemForStepPos.cpp  FootConstraintsAsLinearSystemForStepPos.h  FootConstraintsAsLinearSystemForVelRef.cpp  FootConstraintsAsLinearSystemForVelRef.h  FootConstraintsAsLinearSystemForVelRef.hh  FootHalfSize.cpp  FootHalfSize.hh  MatrixAbstractLayer.h  MatrixAbstractLayerBoost.h  MatrixAbstractLayerDoc.h  MatrixAbstractLayerSmall.h  MatrixAbstractLayerSmallMatrix3x3Default.h  MatrixAbstractLayerSmallMatrix4x4Default.h  MatrixAbstractLayerSmallVector3Default.h  MatrixAbstractLayerSmallVector4Default.h  MatrixAbstractLayerVNL.h  OptCholesky.cpp  OptCholesky.h  OptCholesky.hh  PLDPHerdt.cpp  PLDPSolver.cpp  PLDPSolver.h  (+24 more)
tests/: CMakeLists.txt  ClockCPUTime.cpp  ClockCPUTime.h  ClockCPUTime.hh  CommonTools.cpp  CommonTools.h  CommonTools.hh  DisplayLeftArm.gnu  DumpReferencesObjects.cpp  DumpReferencesObjects.hh  Hirukawa2007.cc  PlotZMPCOMFeetX.gnu  PlotZMPCOMFeetY.gnu  PlotZMPCOMFeetZ.gnu  PlotZMPCOMFeetdX.gnu  README-tests  ReadDataForNovela.cpp  TestBsplines.cpp  TestBussy2011.cpp  TestBussy2011OnLineTestFGPI.datref.cmake  TestFootPrintPGInterface.Valgrind.sh  TestFootPrintPGInterface.cpp  TestFootPrintPGInterfaceData.cpp  TestFootPrintPGInterfaceData.h  TestGarcia2013.cpp  TestHerdt2010.cpp  TestHerdt2010DynamicFilter.cpp  TestHerdt2010EmergencyStopTestFGPI.datref.cmake  TestHerdt2010OnLineTestFGPI.datref.cmake  TestHerdtStepPos.cpp  TestHirukawa2007.cpp  TestInverseKinematics.cpp  TestKajita2003.cpp  TestKajita2003Circle64TestFGPI.datref.cmake  TestKajita2003CircleTestFGPI.datref.cmake  TestKajita2003PbFlorentSeq164TestFGPI.datref.cmake  TestKajita2003PbFlorentSeq1TestFGPI.datref.cmake  TestKajita2003PbFlorentSeq2TestFGPI.datref.cmake  TestKajita2003StraightWalking64TestFGPI.datref.cmake  TestKajita2003StraightWalkingTestFGPI.datref.cmake  (+17 more)
unitTesting/: CMakeLists.txt  ClockCPUTime.cpp  ClockCPUTime.h  CommonTools.cpp  CommonTools.h  DisplayRightArm.gnu  Makefile.am  Makefile.in  PlotZMPCOMFeetdY.gnu  TestAnalyticalMorisawa.cpp  TestAnalyticalMorisawaCompact.cpp  TestAnalyticalMorisawaCompact2.cpp  TestFootPrintPGInterface.Profiling.sh  TestFootPrintPGInterface.Valgrind.sh  TestFootPrintPGInterface.Valgrind2.sh  TestFootPrintPGInterface.cpp  TestFootPrintPGInterface.sh  TestFootPrintPGInterfaceData.cpp  TestFootPrintPGInterfaceData.h  TestHerdt2010.cpp  TestHerdtStepPos.cpp  TestMinimal.cpp  TestMorisawa2007.cpp  TestMorisawa2007OnLineTestFGPI.datref  TestMorisawa2007ShortWalkTestFGPI.datref  TestObject.cpp  TestObject.h  TestOptCholesky.cpp  TestRiccatiEquation.cpp  examples.CMakeList
(+1620 files in other folders)
